# roto-segmentation

./: .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: download_models.py  test_segmentation.py
backend/src/roto_seg/: __init__.py  main.py
backend/src/roto_seg/ai/: __init__.py  device.py  segmentation.py
backend/src/roto_seg/api/: convert.py  exports.py  health.py  projects.py  segment.py  shots.py
backend/src/roto_seg/core/: config.py
backend/src/roto_seg/exporters/: __init__.py  base.py  exr_exporter.py  fxs_exporter.py
backend/src/roto_seg/services/: __init__.py  mask_to_bezier.py  matting.py  roto_pipeline.py  video.py
backend/tests/: __init__.py  test_health.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  worker.Dockerfile
docs/: ANNOTATION-FEATURE.md  M1-SETUP.md  SAM2-VIDEO-CHANGES.md  SAM2-VITMATTE-REFINEMENT-PLAN.md
docs/initial-plan/: 01-executive-summary.md  02-technical-architecture.md  03-silhouette-integration.md  04-technology-stack.md  05-implementation-roadmap.md  06-ai-models-guide.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss
frontend/src/app/core/services/: api.service.ts
frontend/src/app/features/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/features/segmentation/: segmentation.component.html  segmentation.component.scss  segmentation.component.ts
frontend/src/app/features/video-converter/: video-converter.component.html  video-converter.component.scss  video-converter.component.ts
frontend/src/app/features/video-roto/: video-roto.component.html  video-roto.component.scss  video-roto.component.ts
frontend/src/components/: Layout.tsx
frontend/src/environments/: environment.prod.ts
frontend/src/pages/: Dashboard.tsx  Projects.tsx  ShotViewer.tsx
