[project]
name = "roto-seg"
version = "0.1.0"
description = "AI-powered rotoscoping automation system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Pankaj Parkar", email = "parkarpankaj3@gmail.com" }
]
keywords = ["rotoscoping", "vfx", "segmentation", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",

    # Task queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",

    # AI/ML (core - GPU versions installed separately)
    "numpy>=1.26.3",
    "scipy>=1.12.0",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0.80",

    # Video processing
    "av>=11.0.0",
    "ffmpeg-python>=0.2.0",

    # Image formats
    "imageio>=2.33.1",

    # Utilities
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "black>=24.1.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

gpu = [
    # Install PyTorch separately for correct CUDA version
    # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
    "segment-anything-2>=0.1.0",
]

[project.scripts]
roto-seg = "roto_seg.cli:main"

[project.urls]
Homepage = "https://github.com/pankajparkar/roto-segmentation"
Repository = "https://github.com/pankajparkar/roto-segmentation"
Documentation = "https://github.com/pankajparkar/roto-segmentation#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roto_seg"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B009",   # do not call getattr with a constant attribute value
]

[tool.ruff.isort]
known-first-party = ["roto_seg"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/roto_seg --cov-report=term-missing"
